--- a/src/shared/components/challenge-listing/Listing/style.scss
+++ b/src/shared/components/challenge-listing/Listing/style.scss
@@ -5,7 +5,7 @@
   width: 70%;
   padding: 0 $base-unit;
 
-  @include xs-to-sm {
+  @include xxs-to-sm {
     width: 100%;
     padding: 0 $base-unit + 5;
   }
